Diseño de ofertas en la página de inicio completado

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -14,6 +14,7 @@
     <!-- Fin fuentes -->
   </head>
   <body>
+    <!-- header -->
     <header class="cabecera">
       <nav>
         <ul>
@@ -41,9 +42,57 @@
         </ul>
       </nav>
     </header>
+    <!-- Fin del header -->
+
+    <!-- Contenedor Principal -->
     <main class="principal">
-      <section class="slider-principal">SLIDER</section>
+      <section class="slider-principal">
+        <img src="./assets/img/banner.jpg" alt="Ofertas de productos">
+      </section>
+      <section class="productos">
+        <h2>Ofertas</h2>
+
+        <article class="producto">
+          <img src="./assets/img/productos/smart.png" alt="Smart Tv">
+          <section class="descripcion-oferta-producto">
+            <h4>Smart Tv 32 HItachi Le32smart19 Android Frameless Oficial</h4>
+            <p class="precio-oferta">$ 28.999  <span class="descuento-oferta">9% OFF</span></p>
+            <span class="precio-envio-oferta">Envío gratis</span>
+          </section>
+        </article>
+        <article class="producto">
+          <img src="./assets/img/productos/aire.png" alt="Smart Tv">
+          <section class="descripcion-oferta-producto">
+            <h4>Aire acondicionado Hitachi</h4>
+            <p class="precio-oferta">$ 20.999  <span class="descuento-oferta">40% OFF</span></p>
+            <span class="precio-envio-oferta">Envío gratis</span>
+          </section>
+        </article>
+        <article class="producto">
+          <img src="./assets/img/productos/drone.png" alt="Smart Tv">
+          <section class="descripcion-oferta-producto">
+            <h4>Drone de primera calidad</h4>
+            <p class="precio-oferta">$ 50.999  <span class="descuento-oferta">34% OFF</span></p>
+            <span class="precio-envio-oferta">Envío gratis</span>
+          </section>
+        </article>
+        <article class="producto">
+          <img src="./assets/img/productos/colchon.png" alt="Smart Tv">
+          <section class="descripcion-oferta-producto">
+            <h4>Colchón cannon</h4>
+            <p class="precio-oferta">$ 14.500</p>
+            <span class="precio-envio-oferta">Envío gratis</span>
+          </section>
+        </article>
+  
+        <section class="ver-todas-ofertas">
+          <ul>
+            <li><a href="#">Ver todas</a></li>
+            <li><a href="#">></a></li>
+          </ul>
+        </section>
+      </section>
     </main>
-    <footer class="pie-pagina">FOOTER.</footer>
+    <!-- Fin contenedor Principal -->
   </body>
 </html>
