--- a/workspace/index.html
+++ b/workspace/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercado Libre Argentina</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width:600px)">
     <!-- Fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
@@ -50,8 +51,8 @@
         <img src="./assets/img/banner.jpg" alt="Ofertas de productos">
       </section>
       <section class="productos">
-        <h2>Ofertas</h2>
-
+        <h2 class="titulo-contenedor-ofertas">Ofertas</h2>
+    
         <article class="producto">
           <img src="./assets/img/productos/smart.png" alt="Smart Tv">
           <section class="descripcion-oferta-producto">
