Banner y menu de categorias con diseño inicial completo

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -18,26 +18,77 @@
       <nav>
         <ul class="menu-principal">
           <li class="icono-hamburgesa">
-            <img src="./assets/icons/menu_black_24dp.svg" alt="Menú">
+            <img src="./assets/icons/menu_black_24dp.svg" alt="Menú" />
           </li>
           <li class="caja-buscar">
-            <span><img src="./assets/icons/search_black_24dp.svg" alt="Buscar"></span>
+            <span
+              ><img src="./assets/icons/search_black_24dp.svg" alt="Buscar"
+            /></span>
             <input type="text" placeholder="Buscar en Mercado Libre" />
           </li>
           <li class="carrito-compras">
-            <img src="./assets/icons/shopping_cart_black_24dp.svg" alt="Carrito de compras">
+            <img
+              src="./assets/icons/shopping_cart_black_24dp.svg"
+              alt="Carrito de compras"
+            />
           </li>
         </ul>
       </nav>
       <section class="banner-texto-cabecera">
-        <div><img src="./assets/icons/room_black_24dp.svg" alt=""></div>
+        <div><img src="./assets/icons/room_black_24dp.svg" alt="" /></div>
         <span>Enviar a Leandro Cosme Tomassini - Av. Ca...</span>
-        <div><img src="./assets/icons/keyboard_arrow_right_black_24dp.svg" alt=""></div>
+        <div>
+          <img
+            src="./assets/icons/keyboard_arrow_right_black_24dp.svg"
+            alt=""
+          />
+        </div>
       </section>
     </header>
     <main>
-      <div class="caja">1</div>
-      <div class="caja">2</div>
+      <section class="slideshow-inicio">
+        <img
+          src="./assets/img/banner.png"
+          alt="Ofertas y promociones exclusivas."
+        />
+      </section>
+      <div class="menu-categorias">
+        <nav>
+          <ul class="lista-menu-categorias">
+            <li>
+              <div class="circulo-blanco">
+                <img src="./assets/icons/qr_code_2_black_24dp.svg" alt="Pagar con QR">
+              </div>
+              <span>Pagar con QR</span>
+            </li>
+            <li>
+              <div class="circulo-blanco">
+                <img src="./assets/icons/local_offer_black_24dp.svg" alt="Pagar con QR">
+              </div>
+              <span>Ofertas</span>
+            </li>
+            <li>
+              <div class="circulo-blanco">
+                <img src="./assets/icons/shopping_bag_black_24dp.svg" alt="Pagar con QR">
+              </div>
+              <span>Súper</span>
+            </li>
+            <li>
+              <div class="circulo-blanco">
+                <img src="./assets/icons/drive_eta_black_24dp.svg" alt="Pagar con QR">
+              </div>
+              <span>Autos, motos y otros</span>
+            </li>
+            <li>
+              <div class="circulo-blanco">
+                <img src="./assets/icons/add_black_24dp.svg" alt="Pagar con QR">
+              </div>
+              <span>Ver más</span>
+            </li>
+
+          </ul>
+        </nav>
+      </div>
       <div class="caja">3</div>
       <div class="caja">4</div>
       <div class="caja">5</div>
