--- a/workspace/index.html
+++ b/workspace/index.html
@@ -57,38 +57,54 @@
           <ul class="lista-menu-categorias">
             <li>
               <div class="circulo-blanco">
-                <img src="./assets/icons/qr_code_2_black_24dp.svg" alt="Pagar con QR">
+                <img
+                  src="./assets/icons/qr_code_2_black_24dp.svg"
+                  alt="Pagar con QR"
+                />
               </div>
               <span>Pagar con QR</span>
             </li>
             <li>
               <div class="circulo-blanco">
-                <img src="./assets/icons/local_offer_black_24dp.svg" alt="Pagar con QR">
+                <img
+                  src="./assets/icons/local_offer_black_24dp.svg"
+                  alt="Pagar con QR"
+                />
               </div>
               <span>Ofertas</span>
             </li>
             <li>
               <div class="circulo-blanco">
-                <img src="./assets/icons/shopping_bag_black_24dp.svg" alt="Pagar con QR">
+                <img
+                  src="./assets/icons/shopping_bag_black_24dp.svg"
+                  alt="Pagar con QR"
+                />
               </div>
               <span>Súper</span>
             </li>
             <li>
               <div class="circulo-blanco">
-                <img src="./assets/icons/drive_eta_black_24dp.svg" alt="Pagar con QR">
+                <img
+                  src="./assets/icons/drive_eta_black_24dp.svg"
+                  alt="Pagar con QR"
+                />
               </div>
               <span>Autos, motos y otros</span>
             </li>
             <li>
               <div class="circulo-blanco">
-                <img src="./assets/icons/add_black_24dp.svg" alt="Pagar con QR">
+                <img
+                  src="./assets/icons/add_black_24dp.svg"
+                  alt="Pagar con QR"
+                />
               </div>
               <span>Ver más</span>
             </li>
-
           </ul>
         </nav>
       </div>
+      
+      
       <div class="caja">3</div>
       <div class="caja">4</div>
       <div class="caja">5</div>
