--- a/workspace/index.html
+++ b/workspace/index.html
@@ -5,116 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercado Libre Argentina</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- Fuentes -->
+    <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <!-- Fin fuentes -->
+    <!-- End of font -->
   </head>
   <body class="body">
-    <header class="contenedor-menu-principal">
-      <nav>
-        <ul class="menu-principal">
-          <li class="icono-hamburgesa">
-            <img src="./assets/icons/menu_black_24dp.svg" alt="Menú" />
-          </li>
-          <li class="caja-buscar">
-            <span
-              ><img src="./assets/icons/search_black_24dp.svg" alt="Buscar"
-            /></span>
-            <input type="text" placeholder="Buscar en Mercado Libre" />
-          </li>
-          <li class="carrito-compras">
-            <img
-              src="./assets/icons/shopping_cart_black_24dp.svg"
-              alt="Carrito de compras"
-            />
-          </li>
-        </ul>
-      </nav>
-      <section class="banner-texto-cabecera">
-        <div><img src="./assets/icons/room_black_24dp.svg" alt="" /></div>
-        <span>Enviar a Leandro Cosme Tomassini - Av. Ca...</span>
-        <div>
-          <img
-            src="./assets/icons/keyboard_arrow_right_black_24dp.svg"
-            alt=""
-          />
-        </div>
-      </section>
-    </header>
-    <main>
-      <section class="slideshow-inicio">
-        <img
-          src="./assets/img/banner.png"
-          alt="Ofertas y promociones exclusivas."
-        />
-      </section>
-      <div class="menu-categorias">
-        <nav>
-          <ul class="lista-menu-categorias">
-            <li>
-              <div class="circulo-blanco">
-                <img
-                  src="./assets/icons/qr_code_2_black_24dp.svg"
-                  alt="Pagar con QR"
-                />
-              </div>
-              <span>Pagar con QR</span>
-            </li>
-            <li>
-              <div class="circulo-blanco">
-                <img
-                  src="./assets/icons/local_offer_black_24dp.svg"
-                  alt="Pagar con QR"
-                />
-              </div>
-              <span>Ofertas</span>
-            </li>
-            <li>
-              <div class="circulo-blanco">
-                <img
-                  src="./assets/icons/shopping_bag_black_24dp.svg"
-                  alt="Pagar con QR"
-                />
-              </div>
-              <span>Súper</span>
-            </li>
-            <li>
-              <div class="circulo-blanco">
-                <img
-                  src="./assets/icons/drive_eta_black_24dp.svg"
-                  alt="Pagar con QR"
-                />
-              </div>
-              <span>Autos, motos y otros</span>
-            </li>
-            <li>
-              <div class="circulo-blanco">
-                <img
-                  src="./assets/icons/add_black_24dp.svg"
-                  alt="Pagar con QR"
-                />
-              </div>
-              <span>Ver más</span>
-            </li>
-          </ul>
-        </nav>
-      </div>
+
+      <!-- Main menu -->
+      <header class="main-menu-container">
+          <nav>
+            <ul class="main-menu-container__ul">
+              <li class="main-menu-container__hamburger"><img src="./assets/icons/menu_black_24dp.svg" alt="Menú" class="main-menu-container__img"></li>
+              <li>
+                <div class="main-menu-container__box-search">
+                  <img src="./assets/icons/search_black_24dp.svg" alt="Buscar">
+                  <input type="text" placeholder="Buscar en Mercado Libre" class="main-menu-container__box-search-input">
+                </div>
+              </li>
+              <li class="main-menu-container__cart">
+                <img src="./assets/icons/shopping_cart_black_24dp.svg" alt="Carrito de compras">
+              </li>
+            </ul>
+          </nav>    
+      </header>
+      <!-- End of main menu -->
       
-      
-      <div class="caja">3</div>
-      <div class="caja">4</div>
-      <div class="caja">5</div>
-      <div class="caja">6</div>
-      <div class="caja">7</div>
-      <div class="caja">8</div>
-      <div class="caja">9</div>
-      <div class="caja">10</div>
-      <div class="caja">11</div>
-      <div class="caja">12</div>
+      <div class="body--box">1</div>
+      <div class="body--box">2</div>
+      <div class="body--box">3</div>
+      <div class="body--box">4</div>
+      <div class="body--box">5</div>
+      <div class="body--box">6</div>
+      <div class="body--box">7</div>
+      <div class="body--box">8</div>
+      <div class="body--box">9</div>
+      <div class="body--box">10</div>
+      <div class="body--box">11</div>
+      <div class="body--box">12</div>
     </main>
   </body>
 </html>
